--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -39,3 +39,7 @@ php_flag log_errors On
 php_flag short_open_tag On
 php_value request_order GP
 php_value upload_max_filesize 3M
+
+RedirectPermanent /platinum.php /premiumplatinum.php
+RedirectPermanent /premium.php /premiumplatinum.php
+RedirectPermanent /about.php /
